// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should match inline snapshot 1`] = `
<div>
  <ul
    class="e-list e-list--inline"
  >
    <li
      class="e-list__item"
    >
      List item
    </li>
    <li
      class="e-list__item"
    >
      List item
    </li>
    <li
      class="e-list__item"
    >
      List item
    </li>
  </ul>
</div>
`;

exports[`<List /> should match ol snapshot 1`] = `
<div>
  <ol
    class="e-list e-list--stacked"
  >
    <li
      class="e-list__item"
    >
      List item
    </li>
    <li
      class="e-list__item"
    >
      List item
    </li>
    <li
      class="e-list__item"
    >
      List item
    </li>
  </ol>
</div>
`;

exports[`<List /> should match stacked snapshot 1`] = `
<div>
  <ul
    class="e-list e-list--stacked"
  >
    <li
      class="e-list__item"
    >
      List item
    </li>
    <li
      class="e-list__item"
    >
      List item
    </li>
    <li
      class="e-list__item"
    >
      List item
    </li>
  </ul>
</div>
`;

exports[`<ListItem /> should match snapshot 1`] = `
<div>
  <li
    class="e-list__item"
  >
    List item
  </li>
</div>
`;
